# review-talk-server

./: .gitignore  README.md
backend/: .dockerignore  .env.template  .gcloudignore  .gitignore  .helmignore  .kubeignore  README.md  main.py  openapi.yaml  pyproject.toml
backend/src/com/reviewtalk/chat/: base_service.py  factory.py  gemini_service.py  openai_service.py  router.py  schemas.py  service.py  storage.py
backend/src/com/reviewtalk/crawl/: base.py  danawa_review_crawler.py
backend/src/com/reviewtalk/router/: chat.py  chat_ws.py
front-admin/: .dockerignore  README.md  package-lock.json  package.json
front-admin/src/: App.vue
front-admin/src/components/: Chat.vue
